Fixed extra whitespace

--- a/css/site.css
+++ b/css/site.css
@@ -52,7 +52,7 @@ body {
 	padding: 0;
 	font-family: 'Source Sans Pro';
 	color: black;
-background: url('/img/grid.png') repeat 0 0;
+	background: url('/img/grid.png') repeat 0 0;
 }
 
 @media only screen and (min--moz-device-pixel-ratio: 2),
@@ -151,8 +151,7 @@ html, body {
 }
 
 #menu a {
-	width: 100%;
-	height: 100%;
+	margin: 0;
 	padding: 10px 15px;
 	display: block;
 	text-decoration: none;
